<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/Color_aqua">


        <TextView
            android:id="@+id/txtV_state"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="214dp"
            android:layout_marginRight="214dp"
            android:layout_marginBottom="142dp"
            android:text="@string/State_text"
            android:textColor="@color/White_font"
            android:textSize="12pt" />

        <TextView
            android:id="@+id/txtV_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"

            android:layout_marginStart="149dp"
            android:layout_marginLeft="149dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="153dp"
            android:layout_marginRight="153dp"
            android:layout_marginBottom="55dp"
            android:text="@string/Temperature_text"
            android:textColor="@color/White_font"
            android:textSize="46sp" />

        <ImageButton
            android:id="@+id/Ibtn_settings_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="148dp"
            android:background="@color/Color_aqua"
            android:contentDescription="@string/Ibtn_Settings_text"
            app:srcCompat="@drawable/ic_settings_black_24dp" />

        <TextView
            android:id="@+id/txtV_Clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="164dp"
            android:layout_marginRight="164dp"
            android:layout_marginBottom="25dp"
            android:text="@string/txt_clear"
            android:textColor="@color/White_font"
            android:textSize="18sp" />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White_font"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/Cardview1_umbrella"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/White_font"
                android:padding="4dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtV_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/txt_today"
                        android:textColor="@color/Black_font"
                        android:textSize="8pt" />


                    <View
                        android:layout_width="380dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@color/cardview_shadow_start_color"


                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtV_time1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="285dp"
                            android:layout_marginRight="285dp"
                            android:layout_marginBottom="111dp"
                            android:padding="4dp"
                            android:text="4:00PM" />

                        <TextView
                            android:id="@+id/txtV_time2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="214dp"
                            android:layout_marginRight="214dp"
                            android:layout_marginBottom="112dp"
                            android:padding="4dp"
                            android:text="5:00PM" />

                        <TextView
                            android:id="@+id/txtV_time3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="135dp"
                            android:layout_marginRight="135dp"
                            android:layout_marginBottom="112dp"
                            android:padding="4dp"
                            android:text="6:00PM" />

                        <TextView
                            android:id="@+id/txtV_time4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="58dp"
                            android:layout_marginRight="58dp"
                            android:layout_marginBottom="112dp"
                            android:padding="4dp"
                            android:text="7:00PM" />

                        <TextView
                            android:id="@+id/txtV_time5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="283dp"
                            android:layout_marginRight="283dp"
                            android:layout_marginBottom="41dp"
                            android:padding="4dp"
                            android:text="8:00PM" />

                        <TextView
                            android:id="@+id/txtV_time6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="213dp"
                            android:layout_marginRight="213dp"
                            android:layout_marginBottom="42dp"
                            android:padding="4dp"
                            android:text="9:00PM" />

                        <TextView
                            android:id="@+id/txtV_time7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="131dp"
                            android:layout_marginRight="131dp"
                            android:layout_marginBottom="43dp"
                            android:padding="4dp"
                            android:text="10:00PM" />

                        <TextView
                            android:id="@+id/txtV_time8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="55dp"
                            android:layout_marginRight="55dp"
                            android:layout_marginBottom="43dp"
                            android:padding="4dp"
                            android:text="11:00PM" />

                    </RelativeLayout>




                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/Cardview2_umbrella"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/White_font"
                android:padding="4dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtV_tomorrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/txt_tomorrow"
                        android:textColor="@color/Black_font"
                        android:textSize="8pt" />

                    <View
                        android:layout_width="380dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@color/cardview_shadow_start_color"


                        />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtV_time1_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="285dp"
                            android:layout_marginRight="285dp"
                            android:layout_marginBottom="111dp"
                            android:padding="4dp"
                            android:text="4:00PM" />

                        <TextView
                            android:id="@+id/txtV_time2_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="214dp"
                            android:layout_marginRight="214dp"
                            android:layout_marginBottom="112dp"
                            android:padding="4dp"
                            android:text="5:00PM" />

                        <TextView
                            android:id="@+id/txtV_time3_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="135dp"
                            android:layout_marginRight="135dp"
                            android:layout_marginBottom="112dp"
                            android:padding="4dp"
                            android:text="6:00PM" />

                        <TextView
                            android:id="@+id/txtV_time4_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="58dp"
                            android:layout_marginRight="58dp"
                            android:layout_marginBottom="112dp"
                            android:padding="4dp"
                            android:text="7:00PM" />

                        <TextView
                            android:id="@+id/txtV_time5_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="283dp"
                            android:layout_marginRight="283dp"
                            android:layout_marginBottom="41dp"
                            android:padding="4dp"
                            android:text="8:00PM" />

                        <TextView
                            android:id="@+id/txtV_time6_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="213dp"
                            android:layout_marginRight="213dp"
                            android:layout_marginBottom="42dp"
                            android:padding="4dp"
                            android:text="9:00PM" />

                        <TextView
                            android:id="@+id/txtV_time7_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="131dp"
                            android:layout_marginRight="131dp"
                            android:layout_marginBottom="43dp"
                            android:padding="4dp"
                            android:text="10:00PM" />

                        <TextView
                            android:id="@+id/txtV_time8_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="55dp"
                            android:layout_marginRight="55dp"
                            android:layout_marginBottom="43dp"
                            android:padding="4dp"
                            android:text="11:00PM" />

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>


</LinearLayout>